@@ -1,5 +1,13 @@
 2009-19-02  Santiago Dueñas Domínguez  <sduenas@gsyc.es>
 
+	* Bicho/main.py:
+	* Bicho/utils.py:
+
+	Some config file bugs fixed.
+
+
+2009-19-02  Santiago Dueñas Domínguez  <sduenas@gsyc.es>
+
 	* Bicho/backends/Makefile.am:
 
 	Added missed file to the makefile.
